--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1012,3 +1012,51 @@ month = {01},
 title = {Top ten algorithms of the century},
 journal = {Computing in Science and Engineering - C in S&E}
 }
+
+@article{korpel,
+author = {A. Korpel},
+journal = {Appl. Opt.},
+keywords = {Associative memory; Fourier transforms; Holography; Phase conjugation; Quantum electronics; Spatial frequency},
+number = {20},
+pages = {3624--3632},
+publisher = {OSA},
+title = {Gabor: frequency, time, and memory},
+volume = {21},
+month = {10},
+year = {1982},
+url = {http://ao.osa.org/abstract.cfm?URI=ao-21-20-3624},
+doi = {10.1364/AO.21.003624},
+}
+
+
+@article{carsonfamous,
+author={Brittain, J.E.},
+journal={Proceedings of the IEEE},
+title={John R. Carson and the conversation of radio spectrum [Scanning the Past]},
+year={1996},
+volume={84},
+number={6},
+pages={909-910},
+doi={10.1109/JPROC.1996.503148}
+}
+
+@inproceedings{homage1,
+author = {Hill, Peter},
+year = {2007},
+month = {10},
+pages = {2632--2637},
+title = {Dennis Gabor - Contributions to Communication Theory \ Signal Processing},
+journal = {EUROCON 2007 - The International Conference on Computer as a Tool},
+doi = {10.1109/EURCON.2007.4400546}}
+
+
+@article{stftindie,
+	author={J. B. {Allen} and L. R. {Rabiner}},
+	journal={Proceedings of the IEEE},
+	title={A unified approach to short-time Fourier analysis and synthesis},
+	year={1977},
+	volume={65},
+	number={11},
+	pages={1558-1564},
+	doi={10.1109/PROC.1977.10770},
+}
