--- a/latex/report.tex
+++ b/latex/report.tex
@@ -3,6 +3,7 @@
 \usepackage[left=4cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
+\usepackage{xfrac}
 \usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
